--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "aioredis_fastapi"
 version = "1.0.0"
 description = "aioredis_fastapi is an asynchronous redis based session backend for FastAPI powered applications."
 authors = [
-    "Mahmoud Harmouch <business@wiseai.dev>"
+    "Mahmoud Harmouch <oss@wiseai.dev>"
 ]
 license = "GNU General Public License v3.0"
 readme = "README.rst"
@@ -18,7 +18,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
 ]
-keywords = ["python", "aioredis_fastapi", "redis"]
+keywords = ["python", "aioredis", "redis", "fastapi"]
 packages = [
     { include = "aioredis_fastapi", from = "." },
 ]
@@ -28,13 +28,24 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-fastapi = "^0.79.0"
+python = ">=3.9"
+fastapi = "^0.105.0"
+attrs = "^23.1.0"
 aioredis = "^2.0.1"
 
-[tool.poetry.dev-dependencies]
-pytest = "^5.2"
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.3"
+flake8 = "^6.1.0"
+coverage = "^7.3.4"
+mypy = "^1.8.0"
+pytest-cov = "^4.1.0"
+tox = "^4.11.4"
+isort = "^5.13.2"
+black = "^23.12.0"
+pre-commit = "^3.6.0"
+httpx = "^0.26.0"
+pylint = "^3.0.3"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=1.3.2"]
 build-backend = "poetry.core.masonry.api"
