fix tox circleci config

--- a/tox.ini
+++ b/tox.ini
@@ -42,6 +42,7 @@ commands=
     pre-commit run --all-files --show-diff-on-failure
 
 [testenv:test]
+allowlist_externals = poetry
 whitelist_externals = poetry
 skip_install = true
 setenv =
@@ -54,6 +55,7 @@ commands =
     poetry run pytest -v tests/
 
 [testenv:coverage]
+allowlist_externals = poetry
 whitelist_externals = poetry
 skip_install = true
 setenv =
